--- a/webprak/webprak/src/main/resources/templates/message.html
+++ b/webprak/webprak/src/main/resources/templates/message.html
@@ -32,7 +32,7 @@
                id="inputContent"
         >
         <button type="submit" class="btn btn-success"
-                id="create"
+                id="createFile"
         >Создать</button>
     </form>
 </div>
